--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ h5py==3.8.0
 idna==2.8
 importlib-metadata==6.1.0
 jax==0.4.6
+joblib==1.2.0
 keras==2.12.0
 libclang==16.0.0
 Markdown==3.4.3
@@ -31,6 +32,7 @@ requests==2.22.0
 requests-oauthlib==1.3.1
 requests-unixsocket==0.2.0
 rsa==4.9
+scikit-learn==1.2.2
 scipy==1.10.1
 six==1.14.0
 tensorboard==2.12.0
@@ -40,6 +42,7 @@ tensorflow==2.12.0
 tensorflow-estimator==2.12.0
 tensorflow-io-gcs-filesystem==0.31.0
 termcolor==2.2.0
+threadpoolctl==3.1.0
 typing_extensions==4.5.0
 urllib3==1.25.8
 Werkzeug==2.2.3
